2003-09-03  Not Zed  <NotZed@Ximian.com>

	* em-icon-stream.[ch]: New subclass of emsyncstream, write camel
	stream one side, creates an icon on the other.

	* em-sync-stream.[ch]: New file, an abstract class for creating
	write-any-thread-act-gui-thread stuff.  'em-camel-stream' will
	subclass this.

	* em-format-html-display.c (efhd_attachment_button): setup a job
	to write out an icon if the type is an image type, otherwise try
	and get the icon directly.  no caching yet.  the system icons
	aren't scaled properly either.
	(efhd_write_icon_job): async job to write out image content.

2003-09-02  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (emfh_new_job): renamed to
	em_format_html_job_new and made public.
	(emfh_queue_job): renamed to em_format_html_job_queue, and made
	public.

	* em-format-html.h: Made EMFormatHTMLJob a public structure.

2003-09-02  Not Zed  <NotZed@Ximian.com>

	* em-folder-view.h (struct _EMFolderView): track the uicomponent
	while we're activated.

	* em-message-browser.c (em_message_browser_window_new): kill
	warning.
	(emmb_init, emmb_finalise): kill printf

	* em-format-html.c (efh_format_header): Converted code from head
	from David Woodhouse <dwmw2@infradead.org>'s timezone display
	patch.
	(efh_format_text_header): support new flag, HEADER_HTML - header
	alredy in html format.

	* em-format-html-print.c (em_format_html_print_print): only ref
	print_config if != NULL.

	* em-folder-browser.c (emfb_tree_key_press): handle
	space/backspace in messagelist to scroll the message view.
	(emfb_create_view_menus): setup view menu's, this should probably
	live in message-list.
	(emfb_init): setup the folderbrowser enable map into the list.
	(emfb_enable_map): folder browser enable map

	* em-utils.c (em_utils_adjustment_page): new helper to scroll an
	adjustment up/down 1 page.

	* em-folder-view.c (emfv_list_double_click): implement, open
	window.
	(emfv_list_key_press): implement keybinding overrides.  Enhance